--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                             <img src="images/1.jpg"  alt="hmepage">
                         </a>
                         <h4 class="title mb-5">
-                            <a href="https://m7mds3d94.github.io/garcia-home-1//">Home One</a>
+                            <a href="https://m7mds3d94.github.io/garcia-home-1/">Home One</a>
                         </h4>
                     </div>
                 
