--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                    
                   
                         <div class="home_one">
-                        <a href="home-1.html" class="image-h over">
+                        <a href="https://m7mds3d94.github.io/garcia-home-1/" class="image-h over">
                             <img src="images/1.jpg"  alt="hmepage">
                         </a>
                         <h4 class="title mb-5">
