--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
                     <div class="home_tow">
 
                         
-                        <a href="home-2.html" class="image-h over">
+                        <a href="https://m7mds3d94.github.io/garcia-home-2/" class="image-h over">
                             <img src="images/2.jpg" alt="hmepage">
                         </a>
                         <h4 class="title">
-                            <a href="home-2.html">Home two</a>
+                            <a href="https://m7mds3d94.github.io/garcia-home-2/">Home two</a>
                         </h4>
                    
                     </div>
