--- a/index.html
+++ b/index.html
@@ -392,11 +392,11 @@
 <div class="row text-center space-around">
     <div class="col-xl-4 col-lg-4 col-md-3 col-sm-12 col-xs-12 demo-item-content">
         <div class="other-sh-0">
-            <a href="shopping.html" class="image over">
+            <a href="https://m7mds3d94.github.io/garcia-shopping/" class="image over">
                 <img src="images/14.jpg" alt="hmepage">
             </a>
             <h4 class="title mb-5">
-                <a href="shopping.html">Shopping Cart</a>
+                <a href="https://m7mds3d94.github.io/garcia-shopping/">Shopping Cart</a>
             </h4>
         </div>
     </div>
