--- a/index.html
+++ b/index.html
@@ -405,11 +405,11 @@
 
     <div class="col-xl-4 col-lg-4 col-md-3 col-sm-12 col-xs-12 demo-item-content">
         <div class="other-sh-1">
-            <a href="checkout.html" class="image over">
+            <a href="https://m7mds3d94.github.io/garcia-checkout/" class="image over">
                 <img src="images/15.jpg" alt="hmepage">
             </a>
             <h4 class="title  mb-5">
-                <a href="checkout.html">Checkout</a>
+                <a href="https://m7mds3d94.github.io/garcia-checkout/">Checkout</a>
             </h4>
         </div>
     </div>
@@ -418,11 +418,11 @@
 
     <div class="col-xl-4 col-lg-4 col-md-3 col-sm-12 col-xs-12 demo-item-content">
         <div class="other-sh-2">
-            <a href="compare.html" class="image over">
+            <a href="https://m7mds3d94.github.io/garcia-compare/" class="image over">
                 <img src="images/16.jpg" alt="hmepage">
             </a>
             <h4 class="title  mb-5">
-                <a href="compare.html">Compare</a>
+                <a href="https://m7mds3d94.github.io/garcia-compare/">Compare</a>
             </h4>
         </div>
     </div>
@@ -436,11 +436,11 @@
                 <div class="row text-center space-around">
                     <div class="col-xl-4 col-lg-4 col-md-3 col-sm-12 col-xs-12 demo-item-content">
                         <div class="other-sh-3 over">
-                            <a href="myAccount.html" class="image">
+                            <a href="https://m7mds3d94.github.io/garcia-myaccount/" class="image">
                                 <img src="images/17.jpg" alt="hmepage">
                             </a>
                             <h4 class="title  mb-5">
-                                <a href="myAccount.html">My Account</a>
+                                <a href="https://m7mds3d94.github.io/garcia-myaccount/">My Account</a>
                             </h4>
                         </div>
                     </div>
@@ -450,11 +450,11 @@
 
                     <div class="col-xl-4 col-lg-4 col-md-3 col-sm-12 col-xs-12 demo-item-content">
                         <div class="other-sh-4">
-                            <a href="login-Register.html" class="image over">
+                            <a href="https://m7mds3d94.github.io/garcia-register/" class="image over">
                                 <img src="images/18.jpg" alt="hmepage">
                             </a>
                             <h4 class="title  mb-5">
-                                <a href="login-Register.html">Login & Register</a>
+                                <a href="https://m7mds3d94.github.io/garcia-register/">Login & Register</a>
                             </h4>
                         </div>
                     </div>
@@ -462,11 +462,11 @@
 
                     <div class="col-xl-4 col-lg-4 col-md-3 col-sm-12 col-xs-12 demo-item-content">
                         <div class="other-sh-5">
-                            <a href="wishlist.html" class="image over">
+                            <a href="https://m7mds3d94.github.io/garcia-wishlist/" class="image over">
                                 <img src="images/19.jpg" alt="hmepage">
                             </a>
                             <h4 class="title  mb-5">
-                                <a href="wishlist.html">Wishlist</a>
+                                <a href="https://m7mds3d94.github.io/garcia-wishlist/">Wishlist</a>
                             </h4>
                         </div>
                     </div>
@@ -484,11 +484,11 @@
                 <div class="row text-center space-around">
                 <div class="col-xl-4 col-lg-4 col-md-3 col-sm-12 col-xs-12 demo-item-content">
                     <div class="other-sh-6 text-center">
-                        <a href="contact.html" class="image over">
+                        <a href="https://m7mds3d94.github.io/garcia-contact/" class="image over">
                             <img src="images/25.jpg" alt="hmepage">
                         </a>
                         <h4 class="title  mb-5">
-                            <a href="contact.html">Contact us</a>
+                            <a href="https://m7mds3d94.github.io/garcia-contact/">Contact us</a>
                         </h4>
                     </div>
                 </div>
@@ -550,31 +550,31 @@
             <div class="row text-center space-around">
                 <div class="col-xl-4 col-lg-4 col-md-3 col-sm-12 col-xs-12 demo-item-content">
                     <div class="blog-0">
-                        <a href="blog_left_sidebar.html" class="image over">
+                        <a href="https://m7mds3d94.github.io/garcia-blog_left_sidebar/" class="image over">
                             <img src="images/20.jpg" alt="hmepage">
                         </a>
                         <h4 class="title mb-5">
-                            <a href="blog_left_sidebar.html">Blog Left Sidebar</a>
+                            <a href="https://m7mds3d94.github.io/garcia-blog_left_sidebar/">Blog Left Sidebar</a>
                         </h4>
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-3 col-sm-12 col-xs-12 demo-item-content">
                     <div class="blog-1">
-                        <a href="#" class="image over">
+                        <a href="https://m7mds3d94.github.io/garcia-blog_right_sidebar/" class="image over">
                             <img src="images/21.jpg" alt="hmepage">
                         </a>
                         <h4 class="title mb-5">
-                            <a href="blog_right_sidebar.html">Blog Right Sidebar</a>
+                            <a href="https://m7mds3d94.github.io/garcia-blog_right_sidebar/">Blog Right Sidebar</a>
                         </h4>
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-3 col-sm-12 col-xs-12 demo-item-content">
                     <div class="blog-2">
-                        <a href="blog_3_column.html" class="image over">
+                        <a href="https://m7mds3d94.github.io/garcia-blog_three_column/" class="image over">
                             <img src="images/22.jpg" alt="hmepage">
                         </a>
                         <h4 class="title mb-5">
-                            <a href="blog_3_column.html">Blog 3 Column</a>
+                            <a href="https://m7mds3d94.github.io/garcia-blog_three_column/">Blog 3 Column</a>
                         </h4>
                     </div>
                 </div>
@@ -586,21 +586,21 @@
         <div class="row text-center mt-5 space-around">
             <div class="col-xl-4 col-lg-4 col-md-3 col-sm-12 mr-50 col-xs-12 demo-item-content">
                 <div class="blog-3">
-                    <a href="single_blog_left.html" class="image over">
+                    <a href="https://m7mds3d94.github.io/garcia-single_blog_left/" class="image over">
                         <img src="images/23.jpg" alt="hmepage">
                     </a>
                     <h4 class="title mb-5">
-                        <a href="single_blog_left.html">Single Blog Left Sidebar</a>
+                        <a href="https://m7mds3d94.github.io/garcia-single_blog_left/">Single Blog Left Sidebar</a>
                     </h4>
                 </div>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-3 col-sm-12 col-xs-12 demo-item-content">
                 <div class="blog-4">
-                    <a href="single_blog_right.html" class="image over">
+                    <a href="https://m7mds3d94.github.io/garcia-single_blog_right/" class="image over">
                         <img src="images/24.jpg" alt="hmepage">
                     </a>
                     <h4 class="title mb-5">
-                        <a href="single_blog_right.html">Single Blog Right Sidebar</a>
+                        <a href="https://m7mds3d94.github.io/garcia-single_blog_right/">Single Blog Right Sidebar</a>
                     </h4>
                 </div>
             </div>
@@ -610,11 +610,11 @@
       
         <div class="col-xl-4 col-lg-4 col-md-3 col-sm-12 col-xs-12 demo-item-content">
             <div class="blog-5">
-                <a href="#" class="image over">
+                <a href="https://m7mds3d94.github.io/garcia-single_blog_right/" class="image over">
                     <img src="images/24.jpg" alt="hmepage">
                 </a>
                 <h4 class="title mb-5">
-                    <a href="#">Single Blog Right Sidebar</a>
+                    <a href="https://m7mds3d94.github.io/garcia-single_blog_right/">Single Blog Right Sidebar</a>
                 </h4>
             </div>
         </div>
