--- a/index.html
+++ b/index.html
@@ -436,11 +436,11 @@
                 <div class="row text-center space-around">
                     <div class="col-xl-4 col-lg-4 col-md-3 col-sm-12 col-xs-12 demo-item-content">
                         <div class="other-sh-3 over">
-                            <a href="https://m7mds3d94.github.io/garcia-myaccount/" class="image">
+                            <a href="https://m7mds3d94.github.io/garcia-my_account/" class="image">
                                 <img src="images/17.jpg" alt="hmepage">
                             </a>
                             <h4 class="title  mb-5">
-                                <a href="https://m7mds3d94.github.io/garcia-myaccount/">My Account</a>
+                                <a href="https://m7mds3d94.github.io/garcia-my_account/">My Account</a>
                             </h4>
                         </div>
                     </div>
